--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
   "name": "electron-tests",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "author": "Franco Cherubini",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "electron-squirrel-startup": "^1.0.0",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "electron": "26.2.1"
+    "update-electron-app": "^2.0.1"
   },
   "main": "public/main.js",
   "scripts": {
     "dev": "react-scripts start",
-    "start": "electron .",
+    "start": "electron-forge start",
     "build": "react-scripts build",
-    "make": "electron-forge make"
+    "make": "electron-forge make",
+    "package": "electron-forge package"
   },
   "eslintConfig": {
     "extends": [
@@ -38,6 +38,12 @@
     ]
   },
   "devDependencies": {
-    "@electron-forge/cli": "^6.4.2"
+    "@electron-forge/cli": "^6.4.2",
+    "@electron-forge/maker-deb": "^6.4.2",
+    "@electron-forge/maker-rpm": "^6.4.2",
+    "@electron-forge/maker-squirrel": "^6.4.2",
+    "@electron-forge/maker-zip": "^6.4.2",
+    "@electron-forge/plugin-auto-unpack-natives": "^6.4.2",
+    "electron": "27.0.0"
   }
 }
